fix: layout contain messing with z-indexes
Fixes: #5702

--- a/packages/core/src/forms/control-label/control-label.element.scss
+++ b/packages/core/src/forms/control-label/control-label.element.scss
@@ -5,6 +5,12 @@
 @import './../../styles/tokens/generated/index';
 @import './../../styles/mixins/mixins';
 
+:host {
+  // contain is set here to manage edge case where people are using clr-angular signposts and tooltips inside core form input groups
+  // see: https://github.com/vmware/clarity/issues/5702
+  contain: inherit !important;
+}
+
 :host([action='primary']) {
   min-width: var(--internal-label-min-width, initial);
 }
